Updated shell script, removed secondary script, changed naming of functions.

--- a/server_openwrt/etc/sysupgrade.conf
+++ b/server_openwrt/etc/sysupgrade.conf
@@ -1,9 +1,5 @@
 ## This file contains files and directories that should
 ## be preserved during an upgrade.
-
-# /etc/example.conf
-# /etc/openvpn/
-/usr/sbin/usbip-startup-share
 /etc/hotplug.d/usb/90-usb_usbip
-/etc/usbip_allowed_usb_devices.txt
+/etc/usbip_share_these_devices.list
 /etc/rc.local
